--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ project:
 
 
 website:
-  title: "Monserrat Olavarria"
+  title: "Monserrat Olavarria Balmaceda"
   navbar:
     right:
       - text: Dischi
